@@ -495,6 +495,7 @@ struct str_table funcs[] = {
     { F_RNAMEGET, "rnameget" },
     { F_RANDINT,  "randint" },
     { F_RANDSTR,  "randstr" },
+    { F_TVARYING, "tvarying" },
     { F_NADARWAT, "nadarwat" },   /* Nadaraya-Watson */
     { F_SIMANN,   "simann" },     /* simulated annealing */
     { F_LOESS,    "loess" },
